--- a/main.css
+++ b/main.css
@@ -552,6 +552,7 @@ font-size: 70px;
         width: 350px;
      }
      .main-item{
+        padding-left: 120px;
         display: flex;
         flex-direction: column;
      }
