--- a/main.css
+++ b/main.css
@@ -99,7 +99,7 @@ margin-inline: 100px;
     display: flex;
     flex-wrap: wrap;
     margin-top: 70px;
-   padding-left: 200px;
+     margin-left: 30px;
    gap: 40px;
 }
 .main-items-1{
@@ -223,7 +223,7 @@ margin-inline: 100px;
 }
 .main-title{
     margin-top: 140px;
-   /* margin-left: 130px; */
+  margin-left: 20px;
     width: 1640px;
     height: 380px;
     border-radius: 45px;
